<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C6B8DF"
    tools:context=".Accommodation">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rectangularbox"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="57dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/accommodation_usm"
            android:textColor="#060284"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="57dp"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/todo1"
            android:onClick="button"
            android:rotationY="-180"
            app:srcCompat="@drawable/next1"
            app:tint="#060284" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text23"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="179dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/ik" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@id/imageView1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:text="@string/text24"
            android:textColor="#000000"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:text="@string/text25"
            android:textColor="#000000"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_below="@id/textView2"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/text4"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/text27"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="700dp"
            android:layout_height="120dp"
            android:layout_below="@id/textView9"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/cik" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_below="@id/imageView11"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="90dp"
            android:layout_below="@id/imageView2"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:background="#FDFDFD"
            android:onClick="button1"
            android:rotationY="0"
            android:text="@string/_1"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/imageView9"
            android:layout_width="65dp"
            android:layout_height="90dp"
            android:layout_below="@id/imageView2"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="20dp"
            android:background="#FDFDFD"
            android:onClick="button2"
            android:rotationY="0"
            android:text="@string/_2"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/imageView10"
            android:layout_width="65dp"
            android:layout_height="90dp"
            android:layout_below="@id/imageView2"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:background="#FDFDFD"
            android:onClick="button3"
            android:rotationY="0"
            android:text="@string/_3"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/imageView11"
            android:layout_width="65dp"
            android:layout_height="90dp"
            android:layout_below="@id/imageView2"
            android:layout_marginLeft="335dp"
            android:layout_marginTop="20dp"
            android:background="#819FF7"
            android:onClick="button4"
            android:rotationY="0"
            android:text="@string/_4"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>